kjs compat